--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -2,6 +2,7 @@
     --primary: #07509D;
     --secondary: #EA2127;
     --lightBlue: #EAF6FF;
+    --lightColor: #F7F7F7;
   }
   
   .text-primary{
