--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -4,7 +4,7 @@
     --lightBlue: #EAF6FF;
     --lightColor: #F7F7F7;
     --border:#6193C5;
-    color-scheme: only light;
+/*     color-scheme: only light; */
 }
 
 .text-primary {
