--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -1,10 +1,10 @@
-:root {
+/* :root {
     --primary: #07509D;
     --secondary: #EA2127;
     --lightBlue: #EAF6FF;
     --lightColor: #F7F7F7;
     --border:#6193C5;
-/*     color-scheme: only light; */
+    color-scheme: only light;
 }
 
 .text-primary {
@@ -95,7 +95,6 @@
 
 .custom-input{
   background: #F0F0F0;
-/* border-radius: 39.6848px; */
 }
 .custom-input::placeholder{
   color: #818181;
@@ -105,4 +104,4 @@
   .text-xxs{
     font-size: xx-small;
   }
-}
+} */
