--- a/src/styles/gatsbyShowcase.scss
+++ b/src/styles/gatsbyShowcase.scss
@@ -48,6 +48,8 @@
   &__website {
     width: 100%;
     max-width: 380px;
+    display: grid;
+    height: 100%;
 
     &--image {
       border-radius: 8px;
@@ -57,6 +59,7 @@
       display: grid;
       align-items: center;
       justify-items: center;
+      height: 100%;
 
       & img {
         width: 101%;
@@ -101,7 +104,6 @@
         height: 100%;
 
         & a {
-
           opacity: 1;
         }
       }
